--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel=" shortcut icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" href="/maskble.png" />
+    <link rel="apple-touch-icon" href="maskble.png" />
     <meta name="theme-color" content="#317EFB"/>
   </head>
   <body>
