--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     />
     <link rel="apple-touch-icon" href="maskble.png" />
     <meta name="theme-color" content="#317EFB" />
-    <!-- Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-3RD1XMTEYX"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -19,11 +23,20 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "GTM-WRSW3TKG");
+      gtag("config", "G-3RD1XMTEYX");
     </script>
-    <!-- End Google Tag Manager -->
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=G-3RD1XMTEYX"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script type="module" src="./src/main.tsx"></script>
   </body>
