--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-3RD1XMTEYX"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-3RD1XMTEYX");
+      !(function (e, t, a, n, g) {
+        (e[n] = e[n] || []),
+          e[n].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var m = t.getElementsByTagName(a)[0],
+          r = t.createElement(a);
+        (r.async = !0),
+          (r.src = "https://www.googletagmanager.com/gtm.js?id=G-3RD1XMTEYX"),
+          m.parentNode.insertBefore(r, m);
+      })(window, document, "script", "dataLayer");
     </script>
   </head>
   <body>
