--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-3RD1XMTEYX"
+      src="https://www.googletagmanager.com/gtag/js?id=GTM-5QXC3XK3"
     ></script>
     <script>
       !(function (e, t, a, n, g) {
@@ -23,7 +23,7 @@
         var m = t.getElementsByTagName(a)[0],
           r = t.createElement(a);
         (r.async = !0),
-          (r.src = "https://www.googletagmanager.com/gtm.js?id=G-3RD1XMTEYX"),
+          (r.src = "https://www.googletagmanager.com/gtm.js?id=GTM-5QXC3XK3"),
           m.parentNode.insertBefore(r, m);
       })(window, document, "script", "dataLayer");
     </script>
@@ -32,7 +32,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=G-3RD1XMTEYX"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-5QXC3XK3"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
