--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel=" shortcut icon" type="image/svg+xml" href="favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="./public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name ="robots" content ="nofollow" />
     <link
